--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <img src="images/projects/6.png" alt="Fot de uno de mis proyectos" srcset="">
   </section>
 
-  <section class="benefits">
+  <section class="benefits bg-gradient">
     <div class="container">
       <header class="text-center">
         
@@ -67,33 +67,68 @@
           <div class="icon">
             <i class="gg-code-slash"></i>
           </div>
-          <p>Código limpio</p>
-          <p>It's a dangerous business, Frodo, going out your door. You step onto the road</p>
+          <p class="skill-title">Código limpio</p>
+          <p class="skill-text-secondary text-secondary">It's a dangerous business, Frodo, going out your door. You step onto the road</p>
         </div>
         <div class="skill">
           <div class="icon">
             <i class="gg-search"></i>
           </div>
-          <p>Optimización SEO</p>
-          <p>It's a dangerous business, Frodo, going out your door. You step onto the road</p>
+          <p class="skill-title">Optimización SEO</p>
+          <p class="skill-text-secondary text-secondary">It's a dangerous business, Frodo, going out your door. You step onto the road</p>
         </div>
         <div class="skill">
           <div class="icon">
             <i class="gg-bolt"></i>
           </div>
-          <p>Carga rápida</p>
-          <p>It's a dangerous business, Frodo, going out your door. You step onto the road</p>
+          <p class="skill-title">Carga rápida</p>
+          <p class="skill-text-secondary text-secondary">It's a dangerous business, Frodo, going out your door. You step onto the road</p>
         </div>
         <div class="skill">
           <div class="icon">
             <i class="gg-heart"></i>
           </div>
-          <p>100% profesional</p>
-          <p>It's a dangerous business, Frodo, going out your door. You step onto the road</p>
+          <p class="skill-title">100% profesional</p>
+          <p class="skill-text-secondary text-secondary">It's a dangerous business, Frodo, going out your door. You step onto the road</p>
         </div>
       </div>
     </div>
-
+  </section>
+  <section class="quote container-m text-center">
+    <p class="main-text">
+      Currently, Ford sells six sedans and coupes in North America with the Fiesta, Focus, Fusion, C-Max, Mustang and Taurus.
+      This lineup hits.
+    </p>
+    <div class="top-space-lg">
+      <img src="images/cody.jpeg" alt="Cody el cocodrilo de Código Facilito" width="60" height="60" class="circle">
+      <p class="font-bold">Cody el cocodrilo</p>
+      <p class="text-secondary">Equipo de Código Facilito</p>
+    </div>
+  </section>
+  <section class="bg-gradient contact-section">
+    <div class="container">
+      <form action="" class="card">
+        <label class="input-field">
+          Email:
+          <input type="email" id="email"  name="email" placeholder="hello@example.com">
+        </label>
+        <textarea name="message" id="message" class="input-field top-space" placeholder="Message"></textarea>
+        <input type="submit" value="Enviar" class="top-space-md btn-main">
+      </form>
+      <div class="address">
+        <p class="main-text">Hablemos</p>
+        <p class="top-space">But Brooke Chaffin and Catherine Connors are looking to change that with the introduction.</p>
+        <p class="top-space-md">1995 Matthews Street</p>
+        <p>Bloomington, IL</p>
+        <div class="social-media top-space-md">
+          <a href="" aria-label="Link a mi perfil en Facebook"><img src="images/icons/facebook.png" alt=""></a>
+          <a href=""><img src="images/icons/instagram.png" alt=""></a>
+          <a href=""><img src="images/icons/pinterest.png" alt=""></a>
+          <a href=""><img src="images/icons/twitter.png" alt=""></a>
+          <a href=""><img src="images/icons/vk.png" alt=""></a>
+        </div>
+      </div>
+    </div>
   </section>
   
 </body>
